--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p>SQA, SQE, Software testing, Software testing tools, Software testing techniques, Software testing methodologies</p>
       </div>
       <div>
-        <h2>Get in contact now</h2>
+        <h2>Get in touch</h2>
         <p>Contact me to learn more about my skills and experience, or to discuss opportunities for collaboration.</p>
       </div>
     </div>
